--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 17:05:03 2018</p>
+         Last Run: Thu Dec  6 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -38,19 +38,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>5</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>1</td>
-                        <td>56</td>
+                        <td>0</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>8</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>29</td>
+                        <td>25</td>
                      </tr>
                   </tbody>
                </table>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "58",
-                 "56",
-                 "56"
+                 "57",
+                 "57"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "8",
-                 "29"
+                 "12",
+                 "14",
+                 "25"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 17:05:03 2018</p>
+         Last Run: Thu Dec  6 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>65</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>WSW</td>
-                        <td>37</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>1</td>
-                        <td>57</td>
-                        <td>1</td>
+                        <td>60</td>
+                        <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>37</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>51</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>37</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-6",
+                 "-4",
                  "-2",
                  "-1"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "1",
                  "2"
                ]
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "57",
-                 "51"
+                 "67",
+                 "60",
+                 "54"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "37",
-                 "37"
+                 "51",
+                 "50",
+                 "47"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 17:05:03 2018</p>
+         Last Run: Thu Dec  6 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,34 +461,34 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>10</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>7</td>
                         <td>84</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-10</td>
-                        <td>14</td>
-                        <td>81</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>7</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>5</td>
-                        <td>81</td>
+                        <td>4</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-10",
-                 "-10",
+                 "-9",
+                 "-9",
                  "-10"
                ]
              },
@@ -531,8 +531,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
-                 "-6",
+                 "-5",
+                 "-5",
                  "-6"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "14",
-                 "5"
+                 "7",
+                 "7",
+                 "4"
                ]
              },
              {
@@ -602,8 +602,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "84",
-                 "81",
-                 "81"
+                 "80",
+                 "80"
                ]
              },
              {
@@ -612,8 +612,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "47",
+                 "46",
+                 "46",
                  "46"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 17:05:03 2018</p>
+         Last Run: Thu Dec  6 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-9</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>18</td>
                         <td>WNW</td>
-                        <td>66</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-9</td>
                         <td>2</td>
                         <td>65</td>
                         <td>0</td>
                         <td>18</td>
-                        <td>WNW</td>
-                        <td>69</td>
+                        <td>W</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>68</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "67",
                  "65",
-                 "65"
+                 "66"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "69",
-                 "68"
+                 "52",
+                 "58",
+                 "58"
                ]
              }
            ]
