--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 23:05:03 2018</p>
+         Last Run: Fri Dec  7 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>0</td>
-                        <td>58</td>
+                        <td>1</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>0</td>
-                        <td>58</td>
+                        <td>1</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>25</td>
+                        <td>WSW</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
+                 "1",
+                 "1",
                  "1"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "58",
-                 "57"
+                 "57",
+                 "56",
+                 "54"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "13",
-                 "25"
+                 "2",
+                 "2",
+                 "3"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 23:05:03 2018</p>
+         Last Run: Fri Dec  7 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-1</td>
-                        <td>-4</td>
-                        <td>2</td>
-                        <td>69</td>
-                        <td>0</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>1</td>
+                        <td>63</td>
+                        <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>50</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>2</td>
-                        <td>62</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>50</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>46</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,8 +304,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-2",
+                 "-5",
+                 "-3",
                  "-1"
                ]
              },
@@ -316,8 +316,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
-                 "1",
+                 "-2",
+                 "0",
                  "2"
                ]
              }
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "1",
                  "2",
-                 "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "62",
+                 "63",
+                 "60",
                  "56"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "50",
-                 "50",
-                 "46"
+                 "38",
+                 "36",
+                 "38"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 23:05:03 2018</p>
+         Last Run: Fri Dec  7 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,37 +461,37 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>7</td>
-                        <td>84</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>24</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>7</td>
-                        <td>80</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>24</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>W</td>
                         <td>46</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
+                        <td>-5</td>
                         <td>-10</td>
-                        <td>4</td>
-                        <td>80</td>
+                        <td>19</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
+                        <td>11</td>
+                        <td>W</td>
                         <td>46</td>
                      </tr>
                   </tbody>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
-                 "-9",
+                 "-8",
+                 "-8",
                  "-10"
                ]
              },
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
-                 "-5",
-                 "-6"
+                 "-4",
+                 "-4",
+                 "-5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "4"
+                 "24",
+                 "24",
+                 "19"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
                  "80",
-                 "80"
+                 "79",
+                 "81"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
+                 "47",
                  "46",
                  "46"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Dec  6 23:05:03 2018</p>
+         Last Run: Fri Dec  7 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-3</td>
-                        <td>-9</td>
-                        <td>2</td>
-                        <td>67</td>
-                        <td>0</td>
-                        <td>18</td>
-                        <td>WNW</td>
-                        <td>52</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-9</td>
+                        <td>-8</td>
                         <td>2</td>
                         <td>65</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>63</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>-4</td>
+                        <td>-9</td>
+                        <td>2</td>
+                        <td>63</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>-4</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>16</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-8",
                  "-9",
                  "-10"
                ]
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              }
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
                  "65",
-                 "66"
+                 "63",
+                 "62"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "58",
-                 "58"
+                 "63",
+                 "66",
+                 "64"
                ]
              }
            ]
