--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 00:05:03 2018</p>
+         Last Run: Fri Dec  7 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Clear</td>
                         <td>-7</td>
                         <td>-11</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>0</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>56</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -60,7 +60,7 @@
                         <td>1</td>
                         <td>54</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
                         <td>3</td>
                      </tr>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
+                 "0",
+                 "0",
                  "1"
                ]
              },
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
+                 "58",
                  "56",
                  "54"
                ]
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "3"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 00:05:03 2018</p>
+         Last Run: Fri Dec  7 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>1</td>
-                        <td>63</td>
+                        <td>2</td>
+                        <td>64</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>38</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -272,12 +272,12 @@
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
                  "2",
-                 "1"
+                 "2",
+                 "2"
                ]
              },
              {
@@ -386,7 +386,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
+                 "64",
                  "60",
                  "56"
                ]
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
+                 "40",
                  "36",
-                 "38"
+                 "37"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 00:05:03 2018</p>
+         Last Run: Fri Dec  7 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,19 +464,19 @@
                         <td>-4</td>
                         <td>-8</td>
                         <td>24</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>47</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>24</td>
-                        <td>79</td>
+                        <td>23</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -491,7 +491,7 @@
                         <td>81</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>46</td>
                      </tr>
                   </tbody>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "24",
+                 "23",
                  "19"
                ]
              },
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "81",
                  "80",
-                 "79",
                  "81"
                ]
              },
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
+                 "45",
                  "46",
                  "46"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 00:05:03 2018</p>
+         Last Run: Fri Dec  7 01:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-8</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>W</td>
-                        <td>63</td>
+                        <td>WSW</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Clear</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>63</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>66</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Clear</td>
                         <td>-4</td>
-                        <td>-10</td>
-                        <td>2</td>
+                        <td>-9</td>
+                        <td>1</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>64</td>
+                        <td>14</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -736,7 +736,7 @@
                "data":[
                  "-8",
                  "-9",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1"
                ]
              },
              {
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "66",
                  "63",
                  "62"
                ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "66",
-                 "64"
+                 "30",
+                 "27",
+                 "24"
                ]
              }
            ]
