--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 06:05:07 2018</p>
+         Last Run: Fri Dec  7 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 06:05:07 2018</p>
+         Last Run: Fri Dec  7 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>1</td>
-                        <td>63</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>39</td>
+                        <td>WSW</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>0</td>
                         <td>-3</td>
                         <td>2</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "61",
+                 "62",
+                 "60",
                  "56"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
+                 "40",
                  "40",
                  "40"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 06:05:07 2018</p>
+         Last Run: Fri Dec  7 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 10, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,34 +463,34 @@
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>83</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>7</td>
+                        <td>10</td>
                         <td>82</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
-                        <td>-10</td>
-                        <td>6</td>
+                        <td>-9</td>
+                        <td>9</td>
                         <td>83</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>41</td>
                      </tr>
@@ -521,7 +521,7 @@
                "data":[
                  "-8",
                  "-8",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "8",
-                 "7",
-                 "6"
+                 "10",
+                 "10",
+                 "9"
                ]
              },
              {
@@ -612,8 +612,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "40",
+                 "39",
+                 "41",
                  "41"
                ]
              }
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Dec  7 06:05:07 2018</p>
+         Last Run: Fri Dec  7 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 12, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,11 +679,11 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -695,19 +695,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>19</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>63</td>
                         <td>0</td>
                         <td>14</td>
                         <td>WSW</td>
-                        <td>18</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,7 +807,7 @@
                "data":[
                  "2",
                  "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
+                 "66",
                  "63",
                  "63"
                ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
-                 "19",
-                 "18"
+                 "18",
+                 "17",
+                 "16"
                ]
              }
            ]
